--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -239,6 +239,18 @@
 }
 
 
+@book
+{
+	Erickson2019,
+	author = {Jeff Erickson},
+	title = {{Algorithms, 1st edition}},
+	year = {2019},
+	publisher = {},
+	isbn = {978-1-792-64483-2},
+	url = {http://jeffe.cs.illinois.edu/teaching/algorithms/}
+}
+
+
 @incollection
 {
 	Ellson2003,
