--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -57,15 +57,19 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		\bf{Abbreviation} & \bf{Explanation} \tabularnewline
 		\hline
-		CLI                     & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
+		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{Path}. \tabularnewline
 		\hline
-		GUI                     & \underline{G}raphical \underline{U}ser \underline{I}nterface. \tabularnewline
+		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
 		\hline
-		ILL                      & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
+		GUI              & \underline{G}raphical \underline{U}ser \underline{I}nterface. \tabularnewline
 		\hline
-		SO(n)                 & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions. \tabularnewline
+		ILL              & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
 		\hline
-		TAS                    & \underline{T}riple \underline{A}xis \underline{S}pectrometer. \tabularnewline
+		SO(n)            & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions. \tabularnewline
+		\hline
+		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{Path}. \tabularnewline
+		\hline
+		TAS              & \underline{T}riple \underline{A}xis \underline{S}pectrometer. \tabularnewline
 		\hline
 		UB method        & Not technically an abbreviation, but the product of two matrices \tabularnewline
 		                          & which also give the name to the standard method for crystalographic \tabularnewline
